# complexity_cost_profiler

./: .gitignore  README.md  main.py  pyproject.toml
cost_models/: arm_instr_costs.json  config_weights.json  gpu_ptx_instr_costs.json  precision_profiles.json  x86_64_instr_costs.json
examples/: hpc_precision_demo.py  publication_figures.py  test.ptx
research_notebooks/: complexity_cost_profiler.py  complexity_cost_profiler_en.py  complexity_cost_profiler_v02.ipynb  complexity_cost_profiler_v03.ipynb  complexity_cost_profiler_v04.ipynb  complexity_cost_profiler_v05.ipynb  complexity_cost_profiler_v06.ipynb  generate_instr_models.py
research_py/: analysis_external_repo_one.py  analysis_external_repos.py  analysis_external_source_files.py  analyzer_configuration_environment.py  run_validation.py
results/: memory_tier_pmu_analysis.html  output_simulation.md  price_carbon_heatmaps.html
src/: benchmark_algorithms.py  composite_score_calculator.py  enhanced_cost_analyzer.py  hpc_library_integration.py  instruction_cost_model.py  model_validator.py  precision_accuracy_model.py  utils.py
